--- a/2.css
+++ b/2.css
@@ -43,7 +43,7 @@ a{
     -webkit-transform: translateZ(0); backface-visibility: hidden;
   scale(1.0, 1.0);
     transform: translateZ(0);
-  background: #1B2030 url(http://ammammamm.ihostfull.com/6.jpeg) 50% 0 no-repeat;
+  background:url(http://ammammamm.ihostfull.com/6.jpeg) 50% 0 no-repeat;
   background-size:100%;
   background-attachment:fixed;
   animation: grow 360s  linear 10ms infinite;
